<resources>
    <string name="app_name">Jobu Customer</string>
    <string name="home">Home</string>
    <string name="jobs">Jobs</string>
    <string name="profile">Profile</string>
    <string name="canceled_jobs">Closed</string>
    <string name="completed_jobs">Done</string>
    <string name="ongoing_jobs">Active</string>
    <string name="total_jobs">Total</string>
    <string name="request_for_service">Request For Service</string>
    <string name="recent_jobs">Recent Jobs</string>
    <string name="no_jobs_found">No Jobs Found</string>
    <string name="no_recent_jobs_description">You have not requested any service yet. Browse our services and book your first job.</string>
    <string name="search">Search</string>
    <string name="string_enter_phone_number"><font size="15">Enter phone number</font></string>
    <string name="phone_number">Phone Number</string>
    <string name="string_create_account">Not registered yet? <u><b>Create Account</b></u></string>
    <string name="otp_verification_description">OTP has been sent to you on your mobile phone. Please enter it below</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="request_otp">REQUEST OTP</string>
    <string name="login_with_your_number">Login With Your Number</string>
    <string name="request_otp_description">Please enter your mobile number to receive a verification code.</string>
    <string name="string_continue">Continue</string>
    <string name="select_service_category">Select Service Category</string>
    <string name="service_category">Service Category</string>
    <string name="service_sub_category">Service Sub Category</string>
    <string name="select_service_sub_category">Select Service Sub Category</string>
    <string name="service_description">Service Description</string>
    <string name="enter_service_description">Enter service description</string>
    <string name="service_date_optional">Service Date (Optional)</string>
    <string name="select_service_date">Select service date</string>
    <string name="service_time_optional">Service Time (Optional)</string>
    <string name="select_service_time">Select service time</string>
    <string name="submit">Submit</string>
    <string name="service_categories">Service Categories</string>
    <string name="national_id">National ID</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Logout from the app</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name"><font size="15">Enter your first name</font></string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name"><font size="15">Enter your last name</font></string>
    <string name="national_id_number">National ID Number</string>
    <string name="enter_your_national_id_number"><font size="15">Enter your national ID number</font></string>
    <string name="register">Create Account</string>
    <string name="no_notifications">No Notifications</string>
    <string name="string_mark_all_as_read"><u>Mark all as read</u></string>
    <string name="no_notifications_description">No notifications at the moment. New notifications will be seen here.</string>
    <string name="book_service">Book Service</string>
</resources>