<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_number_verification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_your_number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/request_otp_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_50" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <include
            android:id="@+id/loginPhoneNumber"
            layout="@layout/layout_login_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRequestOtp"
            style="@style/PrimaryMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/request_otp" />

        <TextView
            android:id="@+id/txtForgotPassword"
            style="@style/BodyTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/string_create_account"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>