<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_medium"
        android:layout_marginBottom="8dp"
        android:text="@string/service_time_optional"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_textbox"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp">

        <EditText
            android:id="@+id/serviceTimeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autofillHints="false"
            android:background="@null"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/lexend_regular"
            android:hint="@string/select_service_time"
            android:inputType="date"
            android:textColor="@color/black"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColorHint="@color/grey_50"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/rounded_nest_clock_farsight_analog_24" />

    </LinearLayout>

</LinearLayout>