<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_textbox"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/kenya_flag" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_arrow_drop_down_24" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autofillHints="false"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/string_enter_phone_number"
            android:inputType="phone"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_50" />

    </LinearLayout>

</LinearLayout>