<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/book_service"
                android:textColor="@color/primary" />

            <ImageView
                android:id="@+id/iconClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/round_close_24" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <include
            android:id="@+id/layoutRequestServiceSubcategory"
            layout="@layout/layout_new_service_subcategory" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <include
            android:id="@+id/layoutRequestServiceDescription"
            layout="@layout/layout_new_service_description" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <include
            android:id="@+id/layoutRequestServicePreferredDate"
            layout="@layout/layout_new_service_date" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <include
            android:id="@+id/layoutRequestServicePreferredTime"
            layout="@layout/layout_new_service_time" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitServiceRequest"
            style="@style/PrimaryMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/submit"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>