<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarVerifyOtp"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_code_verification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:fontFamily="@font/lexend_regular"
                android:gravity="center"
                android:text="@string/otp_verification_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_50" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layout_marginBottom="@dimen/spacing_large"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_50"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_50"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_50"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_50"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerifyOtp"
                style="@style/PrimaryMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/verify_otp"
                android:textAllCaps="true" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>