<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTotalJobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_xsmall"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginRight="@dimen/spacing_xsmall"
            android:layout_marginBottom="@dimen/spacing_xsmall"
            android:layout_weight="1"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/cardRadius"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="@dimen/cardRadius"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/rounded_cases_24"
                        app:tint="@color/white" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTotalJobs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexend_bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black"
                        tools:text="927" />

                    <TextView
                        style="@style/ListBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_jobs"
                        android:textColor="@color/grey_50" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardOngoingJobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_xsmall"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginRight="@dimen/spacing_xsmall"
            android:layout_marginBottom="@dimen/spacing_xsmall"
            android:layout_weight="1"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/cardRadius"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardBackgroundColor="@android:color/holo_orange_dark"
                    app:cardCornerRadius="@dimen/cardRadius"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/rounded_history_toggle_off_24"
                        app:tint="@color/white" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtOngoingJobs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexend_bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black"
                        tools:text="827" />

                    <TextView
                        style="@style/ListBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ongoing_jobs"
                        android:textColor="@color/grey_50" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCompletedJobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_xsmall"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginRight="@dimen/spacing_xsmall"
            android:layout_marginBottom="@dimen/spacing_xsmall"
            android:layout_weight="1"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/cardRadius"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardBackgroundColor="@android:color/holo_green_dark"
                    app:cardCornerRadius="@dimen/cardRadius"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/rounded_check_circle_24"
                        app:tint="@color/white" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCompletedJobs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexend_bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black"
                        tools:text="90" />

                    <TextView
                        style="@style/ListBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed_jobs"
                        android:textColor="@color/grey_50" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCanceledJobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_xsmall"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginRight="@dimen/spacing_xsmall"
            android:layout_marginBottom="@dimen/spacing_xsmall"
            android:layout_weight="1"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/cardRadius"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardBackgroundColor="@android:color/darker_gray"
                    app:cardCornerRadius="@dimen/cardRadius"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/rounded_cancel_24"
                        app:tint="@color/white" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCanceledJobs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexend_bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black"
                        tools:text="10" />

                    <TextView
                        style="@style/ListBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/canceled_jobs"
                        android:textColor="@color/grey_50" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>